Revert "start some modernization"
This reverts commit 6113a4b9235e41fd3449d97e290a23a5eeb48fc4.