@@ -15,7 +15,6 @@
 package org.htmlunit.doc;
 
 import java.io.IOException;
-import java.net.URI;
 import java.net.URL;
 import java.nio.charset.StandardCharsets;
 import java.util.ArrayList;
@@ -55,7 +54,7 @@ public class DetailsTest extends WebServerTestCase {
      */
     @Test
     public void contentBlockingRequest() throws Exception {
-        final URL url = URI.create("http://localhost/").toURL();
+        final URL url = new URL("http://localhost/");
 
         try (WebClient webClient = new WebClient()) {
             webClient.getOptions().setThrowExceptionOnScriptError(false);
@@ -155,7 +154,7 @@ public class DetailsTest extends WebServerTestCase {
      */
     @Test
     public void contentBlockingFrames() throws Exception {
-        final URL url = URI.create("https://www.htmlunit.org/").toURL();
+        final URL url = new URL("https://www.htmlunit.org/");
 
         try (WebClient webClient = new WebClient()) {
             // use our own FrameContentHandler
