@@ -14,7 +14,6 @@
  */
 package org.htmlunit.javascript.host.html;
 
-import java.net.URI;
 import java.net.URL;
 import java.util.ArrayList;
 import java.util.List;
@@ -56,7 +55,7 @@ public class HTMLDocument2Test extends SimpleWebTestCase {
             + "<body onload='doTest()'>\n"
             + "</body></html>";
 
-        loadPageWithAlerts(html, URI.create("http://www.gargoylesoftware.com/").toURL(), null);
+        loadPageWithAlerts(html, new URL("http://www.gargoylesoftware.com/"), null);
     }
 
     /**
@@ -77,7 +76,7 @@ public class HTMLDocument2Test extends SimpleWebTestCase {
             + "</body></html>";
 
         getMockWebConnection().setDefaultResponse(html);
-        loadPageWithAlerts(html, URI.create("http://localhost").toURL(), null);
+        loadPageWithAlerts(html, new URL("http://localhost"), null);
     }
 
     /**
@@ -86,7 +85,7 @@ public class HTMLDocument2Test extends SimpleWebTestCase {
     @Test
     @Alerts({"www.gargoylesoftware.com", "gargoylesoftware.com"})
     public void domainMixedCaseNetscape() throws Exception {
-        final URL urlGargoyleUpperCase = URI.create("http://WWW.GARGOYLESOFTWARE.COM/").toURL();
+        final URL urlGargoyleUpperCase = new URL("http://WWW.GARGOYLESOFTWARE.COM/");
 
         final String html = DOCTYPE_HTML
             + "<html><head><title>foo</title><script>\n"
@@ -120,7 +119,7 @@ public class HTMLDocument2Test extends SimpleWebTestCase {
             + "<body onload='doTest()'>\n"
             + "</body></html>";
 
-        loadPageWithAlerts(html, URI.create("http://www.gargoylesoftware.com/").toURL(), null);
+        loadPageWithAlerts(html, new URL("http://www.gargoylesoftware.com/"), null);
     }
 
     /**
@@ -143,7 +142,7 @@ public class HTMLDocument2Test extends SimpleWebTestCase {
             + "</body></html>";
 
         getMockWebConnection().setDefaultResponse(html);
-        loadPageWithAlerts(html, URI.create("http://d4.d3.d2.d1.gargoylesoftware.com").toURL(), null);
+        loadPageWithAlerts(html, new URL("http://d4.d3.d2.d1.gargoylesoftware.com"), null);
     }
 
     /**
@@ -164,7 +163,7 @@ public class HTMLDocument2Test extends SimpleWebTestCase {
             + "</body></html>";
 
         getMockWebConnection().setDefaultResponse(html);
-        loadPageWithAlerts(html, URI.create("http://localhost").toURL(), null);
+        loadPageWithAlerts(html, new URL("http://localhost"), null);
     }
 
     /**
@@ -215,7 +214,7 @@ public class HTMLDocument2Test extends SimpleWebTestCase {
             + "<iframe src='about:blank'></iframe>\n"
             + "</body></html>";
 
-        loadPageWithAlerts(html, URI.create("http://www.gargoylesoftware.com/").toURL(), null);
+        loadPageWithAlerts(html, new URL("http://www.gargoylesoftware.com/"), null);
     }
 
     /**
